tests/errors/2_syntax_errors/void-param.java
class Main {
    static void run (int a, void b){}
}
